--- a/src/css/style.css
+++ b/src/css/style.css
@@ -51,13 +51,14 @@ button {
   display: flex;
   background: #ffffff;
   align-items: center;
+  color: #333333;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   position: fixed;
   z-index: 4;
   width: 100%;
   top: 0;
   left: 0;
-  transition: transform .1s linear;
+  transition: transform 0.1s linear;
 }
 .header__hide {
   transform: translateY(-40px);
@@ -66,6 +67,7 @@ button {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
 }
 .header__logo img {
   margin: 12px 0;
@@ -469,7 +471,98 @@ input::placeholder {
   color: #333333;
 }
 
-/* adaptive layout */
+/* burger menu */
+.burger {
+  display: none;
+}
+.nav__list {
+  position: fixed;
+  display: none;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 300px;
+  width: 375px;
+  height: 277px;
+  right: 0;
+  background: #ffffff;
+  transform: translateX(100%);
+  transition: transform .6s ease-in-out;
+}
+.nav-active {
+  display: block;
+}
+.nav-visible {
+  transform: none;
+}
+.nav__item {
+  padding: 0 130px 0 30px;
+}
+.nav__item a {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 133%;
+  text-transform: uppercase;
+  color: #333333;
+}
+.nav__item:not(:last-child) {
+  margin-bottom: 30px;
+}
+.nav__item:first-child {
+  padding-top: 80px;
+}
+.nav__item:last-child {
+  padding-bottom: 43px;
+}
+.burger {
+  position: relative;
+  width: 30px;
+  height: 20px;
+  display: none;
+  cursor: pointer;
+  z-index: 1000;
+}
+.burger_line {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+  height: 2px;
+  background-color: #333333;
+  transition: opacity 0.3s ease-in-out;
+}
+.burger::before,
+.burger::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #333333;
+  transition: transform 0.3s ease-in-out, top 0.3s ease-in-out, bottom 0.3s ease-in-out;
+}
+.burger::before {
+  top: 0;
+}
+.burger::after {
+  bottom: 0;
+}
+.burger-active .burger_line {
+  opacity: 0;
+} 
+.burger-active::before {
+  top: 50%;
+  transform: rotate(45deg);
+}
+.burger-active::after {
+  bottom: auto;
+  top: 50%;
+  transform: rotate(-45deg);
+}
+
+
+
+/* Adaptive layout */
 
 @media (max-width: 1200px) {
   .slider__nav {
@@ -548,10 +641,10 @@ input::placeholder {
     margin-top: 100px;
   }
   .right-img img:nth-child(3) {
-    margin-top: 18px;
+    margin-top: 15px;
   }
   .right-img img:nth-child(4) {
-    margin-top: 18px;
+    margin-top: 15px;
   }
   .footer__input {
     width: 300px;
@@ -567,6 +660,15 @@ input::placeholder {
   }
 }
 @media (max-width: 767px) {
+
+
+  .burger {
+    display: block;
+  }
+  .nav__list {
+    z-index: 1000;
+  }
+
   .main__display-left {
     width: 100%;
     margin: auto;
