--- a/src/css/style.css
+++ b/src/css/style.css
@@ -76,8 +76,21 @@ button {
   display: flex;
   margin: 12px 0;
 }
-.nav ul > li {
+.nav ul li {
   padding-right: 26px;
+}
+.star {
+  fill: transparent;
+  width: 12px;
+  height: 12px;
+}
+.icon {
+  fill: transparent;
+  width: 24px;
+  height: 24px;
+}
+.icon:hover {
+  fill: #333333;
 }
 
 /* main */
@@ -202,12 +215,20 @@ button {
   line-height: 133%;
   font-weight: 400;
 }
+.price-discount:hover {
+  background-color: antiquewhite;
+  cursor: pointer;
+}
 .price-promotion {
   padding: 4px 8px;
   border: 1px solid black;
   font-size: 12px;
   line-height: 133%;
   font-weight: 400;
+}
+.price-promotion:hover {
+  background-color: antiquewhite;
+  cursor: pointer;
 }
 /* select */
 .select {
@@ -321,13 +342,23 @@ button {
   font-size: 14px;
   line-height: 143%;
   margin-left: 12px;
+  cursor: pointer;
 }
+
 .favorite-btn {
   height: 44px;
   width: 44px;
   background-color: #333333;
   margin-left: 8px;
+
   padding: 10px;
+}
+.favotite-icon {
+  height: 44px;
+  width: 44px;
+}
+.favorite-btn:hover {
+  fill: red;
 }
 .btn-block {
   display: flex;
@@ -372,33 +403,121 @@ button {
   text-decoration: underline;
   color: #333333;
 }
-.styles__centr {
+
+.styles__center {
   display: flex;
-  justify-content: space-between;
 }
-.styles__left {
-  width: 49%;
-}
-.left-img img {
-  width: 100%;
-}
-.styles__right {
-  width: 49%;
-}
-.right-img {
+.gallery__styles {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  max-width: 686px;
+  width: 50%;
 }
-.right-img img {
-  width: 48%;
+.gallery__styles-big {
+  position: relative;
+  max-width: 686px;
+  display: flex;
+  width: 50%;
 }
-.right-img img:nth-child(3) {
-  margin-top: 28px;
+.styles__item {
+  margin: 15px 0;
+  padding: 0 15px;
+  width: 50%;
 }
-.right-img img:nth-child(4) {
-  margin-top: 28px;
+.styles__item-big {
+  margin: 15px 0;
+  padding: 0 15px;
+  width: 100%;
 }
+.styles__item-big .full-screen {
+  position: absolute;
+  top: -184%;
+  right: 6%;
+}
+.styles__item .full-screen {
+  position: absolute;
+  top: -40%;
+  right: 6%;
+}
+.styles__item-inner {
+  background: #333333;
+  position: relative;
+  display: flex;
+  cursor: pointer;
+  overflow: hidden;
+}
+.bag-white {
+  position: relative;
+  width: 48px;
+  height: 48px;
+  fill: transparent;
+}
+.favorite-fill {
+  position: relative;
+  width: 16px;
+  height: 16px;
+  fill: #ffffff;
+}
+/* .styles__item-inner::before {
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, .7);
+  content: '';
+  opacity: 0;
+  transition: all .4s ease;
+  
+} */
+.styles__item-inner:hover .styles__item-img {
+  opacity: 0.2;
+}
+.styles__item-inner:hover .styles__item-info {
+  opacity: 1;
+}
+.styles__item-img {
+  transition: opacity 0.1s linear;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: relative;
+}
+.styles__item-info {
+  display: flex;
+  flex-direction: column;
+  opacity: 0;
+  width: 100%;
+  position: absolute;
+  top: 64%;
+  left: 0%;
+  z-index: 1;
+  transform: translate3d(0, -50%, 0);
+  transition: opacity 0.2s linear;
+  text-align: center;
+  color: #ffffff;
+}
+.styles__item-icon {
+  margin-bottom: 10px;
+}
+.styles__item-icon-favorite {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.favorite-fill {
+  width: 24px;
+  height: 24px;
+}
+.favorite-fill:hover {
+  fill: #ff0000;
+}
+.full-screen {
+  width: 24px;
+  height: 24px;
+  fill: none;
+}
+.styles__item-title {
+  margin-bottom: 46px;
+}
+
 /* footer */
 .footer {
   margin: 130px 0 0;
@@ -476,7 +595,7 @@ input::placeholder {
   display: none;
 }
 .nav__list {
-  position: fixed;
+  position: absolute;
   display: none;
   justify-content: center;
   flex-direction: column;
@@ -486,7 +605,8 @@ input::placeholder {
   right: 0;
   background: #ffffff;
   transform: translateX(100%);
-  transition: transform .6s ease-in-out;
+  transition: transform 0.6s ease-in-out;
+  top: -551%;
 }
 .nav-active {
   display: block;
@@ -521,7 +641,7 @@ input::placeholder {
   cursor: pointer;
   z-index: 1000;
 }
-.burger_line {
+.burger-line {
   position: absolute;
   left: 0;
   top: 50%;
@@ -539,7 +659,8 @@ input::placeholder {
   width: 100%;
   height: 2px;
   background-color: #333333;
-  transition: transform 0.3s ease-in-out, top 0.3s ease-in-out, bottom 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, top 0.3s ease-in-out,
+    bottom 0.3s ease-in-out;
 }
 .burger::before {
   top: 0;
@@ -547,9 +668,9 @@ input::placeholder {
 .burger::after {
   bottom: 0;
 }
-.burger-active .burger_line {
+.burger-active .burger-line {
   opacity: 0;
-} 
+}
 .burger-active::before {
   top: 50%;
   transform: rotate(45deg);
@@ -560,14 +681,15 @@ input::placeholder {
   transform: rotate(-45deg);
 }
 
-
-
-/* Adaptive layout */
+/*Adaptive layout */
 
 @media (max-width: 1200px) {
   .slider__nav {
     left: 6%;
     top: 4%;
+  }
+  .styles__item-big .full-screen {
+    top: -145%;
   }
 }
 @media (max-width: 991px) {
@@ -637,14 +759,22 @@ input::placeholder {
     margin: 10px 0 0 0;
   }
 
-  .styles {
-    margin-top: 100px;
+  .styles__center {
+    display: flex;
+    flex-wrap: wrap;
   }
-  .right-img img:nth-child(3) {
-    margin-top: 15px;
+  .gallery__styles-big {
+    max-width: 686px;
+    display: flex;
+    width: 100%;
+    margin: 0 auto;
   }
-  .right-img img:nth-child(4) {
-    margin-top: 15px;
+  .gallery__styles {
+    width: 100%;
+    margin: 0 auto;
+  }
+  .styles__item-big .full-screen {
+    top: -184%;
   }
   .footer__input {
     width: 300px;
@@ -660,8 +790,6 @@ input::placeholder {
   }
 }
 @media (max-width: 767px) {
-
-
   .burger {
     display: block;
   }
@@ -683,26 +811,32 @@ input::placeholder {
   .slider__nav {
     width: 47px;
   }
-  .styles__centr {
+  .styles__center {
     display: flex;
     flex-wrap: wrap;
   }
-  .styles__right {
+  .gallery__styles-big {
+    max-width: 686px;
+    display: flex;
     width: 100%;
   }
-  .styles__left {
+  .gallery__styles {
     width: 100%;
   }
-  .right-img img {
-    width: 49%;
-    margin-top: 10px;
+  .styles__item-big .full-screen {
+    top: -158%;
   }
-  .right-img img:nth-child(3) {
-    margin-top: 10px;
+  .styles__item .styles__item-title {
+    font-size: 10px;
+    margin-bottom: 0;
   }
-  .right-img img:nth-child(4) {
-    margin-top: 10px;
+  .styles__item .styles__item-icon {
+    margin-bottom: -6px;
   }
+  .bag-white {
+    width: 24px;
+  }
+
   .footer__input {
     width: 100%;
   }
@@ -745,4 +879,29 @@ input::placeholder {
   .footer__btn {
     margin-left: 58%;
   }
+}
+
+.test {
+  display: flex;
+}
+.col-1 {
+  display: flex;
+  width: 50%;
+  height: 600px;
+  border: 1px solid red;
+}
+.item-1 {
+  width: 100%;
+}
+.col-2 {
+  border: 1px solid black;
+  display: flex;
+  flex-wrap: wrap;
+  width: 50%;
+  height: 600px;
+}
+
+.item-2 {
+  width: 50%;
+  border: 1px solid green;
 }
