--- a/src/css/style.css
+++ b/src/css/style.css
@@ -43,7 +43,7 @@ button {
 .container {
   width: 100%;
   max-width: 1440px;
-  padding: 25px;
+  padding: 15px;
   margin: 0 auto;
 }
 .header {
@@ -184,7 +184,8 @@ button {
   width: 100%;
   height: 100%;
 }
-/* dispaly right */
+/* display right */
+
 .display-price {
   margin-left: 20px;
 }
@@ -601,6 +602,7 @@ input::placeholder {
   flex-direction: column;
   margin-top: 300px;
   width: 375px;
+  width: 100%;
   height: 277px;
   right: 0;
   background: #ffffff;
@@ -623,6 +625,7 @@ input::placeholder {
   line-height: 133%;
   text-transform: uppercase;
   color: #333333;
+  margin-left: 30px;
 }
 .nav__item:not(:last-child) {
   margin-bottom: 30px;
